Last development of Swagger moving to firebase instead
