# paladar-back-end/api/controllers/hello_world.js
@@ -36,9 +36,19 @@ module.exports = {
  */
 function hello(req, res) {
   // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello, %s!', name);
+var examples = {
+  "firstName" : "aeiou",
+  "lastName" : "aeiou",
+  "image" : "",
+  "clientId" : 123456789,
+  "Chef" : {
+    "summary" : "aeiou",
+    "image" : "",
+    "alias" : "aeiou"
+  },
+  "email" : "aeiou"
+};
 
   // this sends back a JSON response which is a single string
-  res.json(hello);
+  res.json(examples);
 }
